sim_seq/output_tb_gen_tb_20250408/40/make_output.log
verilator -cc --exe -x-assign fast -Wall --assert --coverage-line -Wno-WIDTHEXPAND -Wno-BLKSEQ -Wno-VARHIDDEN -Wno-WIDTHTRUNC -Wno-UNUSEDSIGNAL -f input.vc top_module.v sim-main.cpp rfuzz-harness.cpp
- V e r i l a t i o n   R e p o r t: Verilator 5.032 2025-01-01 rev UNKNOWN.REV
- Verilator: Built from 0.000 MB sources in 0 modules, into 0.000 MB in 0 C++ files needing 0.000 MB
- Verilator: Walltime 0.001 s (elab=0.000, cvt=0.000, bld=0.000); cpu 0.001 s on 1 threads
cd obj_dir && make -f Vtop_module.mk
c++  -I.  -MMD -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include -I/opt/homebrew/Cellar/verilator/5.032/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TIMING=0 -DVM_TRACE=0 -DVM_TRACE_FST=0 -DVM_TRACE_VCD=0 -faligned-new -fbracket-depth=4096 -fcf-protection=none -Qunused-arguments -Wno-bool-operation -Wno-c++11-narrowing -Wno-constant-logical-operand -Wno-non-pod-varargs -Wno-parentheses-equality -Wno-shadow -Wno-sign-compare -Wno-tautological-bitwise-compare -Wno-tautological-compare -Wno-uninitialized -Wno-unused-but-set-parameter -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable     -std=gnu++17 -Os  -c -o rfuzz-harness.o ../rfuzz-harness.cpp
../rfuzz-harness.cpp:25:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
   25 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:219:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
  219 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:325:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
  325 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:431:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
  431 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:537:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
  537 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:1259:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
 1259 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:1453:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
 1453 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
../rfuzz-harness.cpp:1647:56: error: assigning to 'IData' (aka 'unsigned int') from incompatible type 'VlWide<1>'
 1647 |                                 top->predict_history = predict_history_wide;
      |                                                        ^~~~~~~~~~~~~~~~~~~~
8 errors generated.
make[1]: *** [rfuzz-harness.o] Error 1
make: *** [run] Error 2
